update node version for vercel deployment

--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,8 @@
 {
   "type": "module",
+  "engines": {
+    "node": "22.x"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
